--- a/abstract.tex
+++ b/abstract.tex
@@ -1,32 +1,27 @@
 % -*- coding: utf-8 -*-
-
-
 \begin{zhaiyao}
+质点动力学问题是最常见的动力学问题，本文以场和质点为基本单位，提出了一套方法并实现了一个c++库，可以概括性的解决所有此类问题，
+并提出了碰撞处理的一种新的手段。在解决问题的同时，将精度提高到四阶，将时间消耗降至最小。并且能高度并行，有很好的可拓展性。
 
-这里输入中文摘要。
-\newpage
 
-中文摘要ABF
+例如，二体问题，三体问题，各类碰撞问题，复杂电磁场下的运动问题，都是此问题的简单子集。
 \end{zhaiyao}
 
 
-
-
 \begin{guanjianci}
-毕业论文；模板
+质点动力学，高性能，碰撞处理，并行化，八叉树
 \end{guanjianci}
 
 
 
 \begin{abstract}
+    Particle dynamics is the most common dynamic problem. In this paper which uses the field and particle as the basic unit, a set of methods and a c++ library are proposed and implemented, which can solve the problems above in a general way. Also, a new method of collision processing is created. By this means,the accuracy is improved to the fourth order and the time consumption is minimized. In addition, it can be highly parallel, and has a good scalability.
+    
 
-
-This is the abstract.
-
+    For example, two-body problem, three-body problem, various collision problems, and motion problems under complex electromagnetic fields are all simple subsets of this problem.    
 \end{abstract}
 
 
-
 \begin{keywords}
-Thesis; template
-\end{keywords} 
+Particle dynamics, High performance, Collision processing, Parallelization, Octree
+\end{keywords}
