--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -2,4 +2,13 @@
 
 %\makeschapterhead{致谢}
 \chapter*{致谢}
-感谢您使用本模板。
+感谢郭天勇老师一学期以来的悉心教导，感谢实验室老师和助教老师的帮助
+
+
+感谢全组成员三个多月来的共同学习共同努力
+
+
+感谢家长在学习生活中的关系
+
+
+感谢各位室友在精神上的支持
