--- a/main.tex
+++ b/main.tex
@@ -21,7 +21,6 @@
 \usepackage{caption}
 \usepackage{graphicx, subfig}
 \usepackage{fontspec}
-
 \usepackage{listings}
 \usepackage{xcolor}
 \setmonofont{Consolas}
@@ -66,7 +65,7 @@
 \DeclareBibliographyCategory{cited}
 \AtEveryCitekey{\addtocategory{cited}{\thefield{entrykey}}}
 
-\title{一种高效的多物理场动力学模拟方案}
+\title{一种高效的多物理场动力学模拟方案\footnote{项目托管于\url{https://github.com/NKUCSPaperGroup/KinematicsSimulation}}}
 \author{周子正\footnote{学号:1810334,电子邮箱:zhouzizheng@foxmail.com},刘雨缇\footnote{学号:1811495}，周宇江\footnote{学号:1810333}，张轩珩\footnote{学号:1810320}}
 \date{2018年 12月}
 
